<resources>
    <string name="app_name">GreenKeepers</string>
    <string name="green_keepers_text">1125</string>
    <string name="toast_text_button">Toast</string>
    <string name="join_text_button">Join Us !</string>
    <string name="connect_text_button">Connect</string>
    <string name="random_heading">Voici un nombre aléatoire compris entre 0 et% 1d .</string>
    <string name="titleNumberCleanPlace">Places clean by keepers from the start</string>
    <string name="titleMain">Welcome to all Green Keepers</string>
    <string name="ContentMainImage">Keepers of the Planet</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_keeper">NavigationKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_liste_mission">Liste missions</string>
    <string name="menu_mes_mission">Mes missions</string>
    <string name="menu_message">Messagerie </string>
    <string name="menu_compte">Mon compte</string>
    <string name="menu_cb">Mes infos bancaires</string>
</resources>
