<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_liste_mission"
            android:icon="@drawable/search"
            android:title="@string/menu_liste_mission" />
        <item
            android:id="@+id/nav_mes_mission"
            android:icon="@drawable/wipingswipeforfloors"
            android:title="@string/menu_mes_mission" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/speechbubble"
            android:title="@string/menu_message" />

    </group>

    <item android:title="Mon compte">
        <menu>
            <item
                android:id="@+id/nav_compte"
                android:icon="@drawable/user"
                android:title="@string/menu_compte" />
            <item
                android:id="@+id/nav_banque"
                android:icon="@drawable/creditcardspayment"
                android:title="@string/menu_cb" />
        </menu>
    </item>

</menu>
