<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hello.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_liste_mission"
        android:name="com.example.hello.ui.listemission.ListeMissionFragment"
        android:label="@string/menu_liste_mission"
        tools:layout="@layout/fragment_liste_mission" />

    <fragment
        android:id="@+id/nav_mes_mission"
        android:name="com.example.hello.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_mes_mission"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.hello.ui.tools.ToolsFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_compte"
        android:name="com.example.hello.ui.share.ShareFragment"
        android:label="@string/menu_compte"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_banque"
        android:name="com.example.hello.ui.send.SendFragment"
        android:label="@string/menu_cb"
        tools:layout="@layout/fragment_send" />
</navigation>