<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/green_keepers_text"
        android:textAllCaps="true"
        android:textColor="#162B0C"
        android:textSize="72sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCleaningPlaceTitle"
        tools:text="1125" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="224dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonback"
        android:onClick="ConnectMe"
        android:text="@string/connect_text_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/joinUs_button"
        android:layout_width="224dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonback"
        android:onClick="RandomMe"
        android:text="@string/join_text_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_button"
        app:layout_constraintVertical_bias="0.268" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="420dp"
        android:layout_height="228dp"
        android:contentDescription="@string/ContentMainImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backmain" />

    <TextView
        android:id="@+id/textTitleMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/titleMain"
        android:textColor="#0D3F0F"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textCleaningPlaceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/titleNumberCleanPlace"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleMain"
        tools:text="Places clean by keepers from the start" />


</androidx.constraintlayout.widget.ConstraintLayout>